# minpycube

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  minpycube.rst
src/minpycube/: rcube.py
tests/: test_rcube.py
