[project]
name = "compaction-simulation"
version = "0.1.0"
description = "Pharmaceutical stress vs. strain simulation using machine learning"
authors = [
    {name = "mennymendoza", email = "jmen9575@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true
